--- a/main.css
+++ b/main.css
@@ -34,7 +34,7 @@ transition: 0.5s;
 }
 
 .Directory:hover{
-    opacity: 70%;
+    opacity: 50%;
 }
 
 
@@ -54,7 +54,7 @@ transition: 0.5s;
 }
 
 .Discounts:hover{
-    opacity: 70%;
+    opacity: 50%;
 }
 
 
@@ -74,7 +74,7 @@ transition: 0.5s;
 }
 
 .Delivery:hover{
-    opacity: 70%;
+    opacity: 50%;
 }
 
 
@@ -94,7 +94,7 @@ transition: 0.5s;
 }
 
 .News:hover{
-    opacity: 70%;
+    opacity: 50%;
 }
 
 
@@ -110,7 +110,7 @@ transition: 0.5s;
 }
 
 .logo:hover{
-    opacity: 70%;
+    opacity: 50%;
 }
 
 
@@ -130,20 +130,17 @@ background: #000000;
 border-radius: 30px;
 color: white;
 text-align: center;
-border: #000000;
+border: black;
 }
-
-
 
 .line-shapka{
 position: absolute;
 width: 1920px;
-height: 7px;
+height: 4px;
 top: 170px;
 
 background: black;
 }
-
 
 
 .Novelties{
@@ -178,7 +175,7 @@ transition: 0.5s;
 }
 
 .neverbrokeagain-img-text:hover{
-opacity: 85%;
+opacity: 50%;
 }
 
 
@@ -196,7 +193,7 @@ transition: 0.5s;
 }
     
 .juicewrld-img-text:hover{
-opacity: 85%;
+opacity: 50%;
 }
 
 
@@ -214,7 +211,7 @@ transition: 0.5s;
 }
     
 .sakura-img-text:hover{
-opacity: 85%;
+opacity: 50%;
 }
 
 
@@ -283,7 +280,7 @@ position: absolute;
 width: 232px;
 height: 37px;
 left: 844px;
-top: 890px;
+top: 910px;
 
 font-family: 'Impact';
 font-style: normal;
@@ -298,28 +295,18 @@ color: #000000;
 }
 
 
-
-.fon_for_collaborations_buttons{
-position: absolute;
-width: 1730px;
-height: 95px;
-left: 0;
-right: 0;
-margin-left: auto;
-margin-right: auto;
-background-color: #D9D9D9;;
-top: 1019px;
-}
-
 form{
 display: inline-block;
 }
 
 
 .button_neverbrokeagain{
+position: absolute;
 width: 342.8px;
 height: 95px;
 margin: 0;
+top: 1019px;
+left: 95px;
 font-family: 'Impact';
 font-style: normal;
 font-weight: 200;
@@ -333,7 +320,7 @@ border: #ffffff;
 }
 
 .button_neverbrokeagain:hover{
-font-size: 25px;
+font-size: 30px;
 color: black;
 background-color: white;
 }
@@ -341,9 +328,12 @@ background-color: white;
 
 
 .button_juicewrld{
+position: absolute;
 width: 342.8px;
 height: 95px;
 margin: 0;
+top: 1019px;
+left: 437.8px;
 font-family: 'Impact';
 font-style: normal;
 font-weight: 200;
@@ -357,7 +347,7 @@ border: #ffffff;
 }
 
 .button_juicewrld:hover{
-font-size: 25px;
+font-size: 30px;
 color: black;
 background-color: white;
 }
@@ -365,9 +355,12 @@ background-color: white;
 
 
 .button_rodman{
+position: absolute;
 width: 342.8px;
 height: 95px;
 margin: 0;
+top: 1019px;
+left: 780.6px;
 font-family: 'Impact';
 font-style: normal;
 font-weight: 200;
@@ -381,7 +374,7 @@ border: #ffffff;
 }
 
 .button_rodman:hover{
-font-size: 25px;
+font-size: 30px;
 color: black;
 background-color: white;
 }
@@ -389,9 +382,12 @@ background-color: white;
 
 
 .button_palmangels{
+position: absolute;
 width: 342.8px;
 height: 95px;
 margin: 0;
+top: 1019px;
+left: 1123.4px;
 font-family: 'Impact';
 font-style: normal;
 font-weight: 200;
@@ -405,7 +401,7 @@ border: #ffffff;
 }
 
 .button_palmangels:hover{
-font-size: 25px;
+font-size: 30px;
 color: black;
 background-color: white;
 }
@@ -413,9 +409,12 @@ background-color: white;
 
 
 .button_neighborhood{
+position: absolute;
 width: 342.8px;
 height: 95px;
 margin: 0;
+top: 1019px;
+left: 1466.2px;
 font-family: 'Impact';
 font-style: normal;
 font-weight: 200;
@@ -429,14 +428,14 @@ border: #ffffff;
 }
 
 .button_neighborhood:hover{
-font-size: 25px;
+font-size: 30px;
 color: black;
 background-color: white;
 }
 
 
 
-.fon_for_bottom{
+.fon_for_footer{
 position: absolute;
 width: 100%;
 height: 200px;
@@ -444,4 +443,25 @@ top: 1182px;
 
 background: #000000;
 }
+
+.logo_two {
+
+position: absolute;
+width: 49.03px;
+height: 64px;
+left: 935px;
+top: 1250px;
+transition: 0.5s;
+
+}
+
+.logo_two:hover {
+
+opacity: 50%;
+
+
+}
+
+
+
 
