--- a/vlone-delivery.css
+++ b/vlone-delivery.css
@@ -34,7 +34,7 @@ transition: 0.5s;
 }
 
 .Directory:hover{
-    opacity: 70%;
+    opacity: 50%;
 }
 
 
@@ -54,7 +54,7 @@ transition: 0.5s;
 }
 
 .Discounts:hover{
-    opacity: 70%;
+    opacity: 50%;
 }
 
 
@@ -74,7 +74,7 @@ transition: 0.5s;
 }
 
 .Delivery:hover{
-    opacity: 70%;
+    opacity: 50%;
 }
 
 
@@ -94,7 +94,7 @@ transition: 0.5s;
 }
 
 .News:hover{
-    opacity: 70%;
+    opacity: 50%;
 }
 
 
@@ -110,7 +110,7 @@ transition: 0.5s;
 }
 
 .logo:hover{
-    opacity: 70%;
+    opacity: 50%;
 }
 
 
@@ -122,6 +122,7 @@ height: 36px;
 top: 74px;
 left: 1274px;
 
+font-family: Impact;
 background: #000000;
 border-radius: 30px;
 color: rgb(255, 255, 255);
@@ -135,7 +136,7 @@ border: #000000;
 .line-shapka{
 position: absolute;
 width: 1920px;
-height: 7px;
+height: 4px;
 top: 170px;
 
 background: black;
@@ -188,6 +189,32 @@ margin-left: auto;
 margin-right: auto;
 text-align: center;
 width: 500px;
+}
+
+.fon_for_footer{
+position: absolute;
+width: 100%;
+height: 200px;
+top: 1182px;
+    
+background: #000000;
+}
+
+.logo_two {
+
+position: absolute;
+width: 49.03px;
+height: 64px;
+left: 935px;
+top: 1250px;
+transition: 0.5s;
+    
+}
+    
+.logo_two:hover {
+    
+opacity: 50%;
+    
 }
 
 
