--- a/vlone-directory.css
+++ b/vlone-directory.css
@@ -411,6 +411,195 @@ text-align: center;
 color: #000000;
 }
 
+.cost_one {
+    position: absolute;
+    width: 448px;
+    height: 74px;
+    top: 795px;              
+    left: 118px;
+    margin: 0;
+      
+    font-family: 'Impact';
+    font-style: normal;
+    font-weight: 200;
+    font-size: 25px;
+    line-height: 37px;
+    align-items: center;
+    text-align: center;
+        
+    color: #0A5C21;  
+}
+
+.cost_two{
+    position: absolute;
+    width: 458px;
+    height: 75px;
+    top: 795px;
+    left: 731px;
+    margin: 0;
+    
+    font-family: 'Impact';
+    font-style: normal;
+    font-weight: 200;
+    font-size: 25px;
+    line-height: 37px;
+    align-items: center;
+    text-align: center;
+    
+    color: #0A5C21;
+    }
+
+.cost_three{
+    position: absolute;
+    width: 318px;
+    height: 73px;
+    top: 795px;
+    left: 1442px;
+    margin: 0;
+    
+    font-family: 'Impact';
+    font-style: normal;
+    font-weight: 200;
+    font-size: 25px;
+    line-height: 37px;
+    align-items: center;
+    text-align: center;
+        
+    color: #0A5C21;
+    }
+
+.cost_four{
+    position: absolute;
+    width: 448px;
+    height: 74px;
+    top: 1395px;
+    left: 118px;
+    margin: 0;
+    
+    font-family: 'Impact';
+    font-style: normal;
+    font-weight: 200;
+    font-size: 25px;
+    line-height: 37px;
+    align-items: center;
+    text-align: center;
+        
+    color: #0A5C21;
+    }
+.cost_five{
+    position: absolute;
+    width: 458px;
+    height: 75px;
+    top: 1395px;
+    left: 731px;
+    margin: 0;
+            
+    font-family: 'Impact';
+    font-style: normal;
+    font-weight: 200;
+    font-size: 25px;
+    line-height: 37px;
+    align-items: center;
+    text-align: center;
+            
+    color: #0A5C21;
+    }
+
+.cost_six{
+    position: absolute;
+    width: 318px;
+    height: 73px;
+    top: 1395px;
+    left: 1442px;
+    margin: 0;
+            
+    font-family: 'Impact';
+    font-style: normal;
+    font-weight: 200;
+    font-size: 25px;
+    line-height: 37px;
+    align-items: center;
+    text-align: center;
+            
+    color: #0A5C21;
+    }
+
+.cost_seven{
+    position: absolute;
+    width: 448px;
+    height: 74px;
+    top: 1995px;
+    left: 118px;
+    margin: 0;
+                
+    font-family: 'Impact';
+    font-style: normal;
+    font-weight: 200;
+    font-size: 25px;
+    line-height: 37px;
+    align-items: center;
+    text-align: center;
+                    
+    color: #0A5C21;
+    }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 .fon_for_footer{
 position: absolute;
 width: 100%;
